# liblogicalaccess-android

./: .gitmodules  Jenkinsfile  arm_clang_android_21  conanfile.py
androidreaders/: Android.cpp  Android.hpp  CMakeLists.txt  androidNDKHelper.cpp  androidNDKHelper.hpp  androidreaderprovider.cpp  androidreaderprovider.hpp  androidreaderunit.cpp  androidreaderunit.hpp  androidreaderunitconfiguration.cpp  androidreaderunitconfiguration.hpp  androidsupportcontext.cpp  androidsupportcontext.hpp  conanfile.py  jnihelper.cpp  jnihelper.h  libraryentry.cpp  morphosamreaderprovider.cpp  morphosamreaderprovider.hpp  morphosamreaderunit.cpp  morphosamreaderunit.hpp
androidreaders/commands/: MifareAndroidCommands.cpp  MifareAndroidCommands.hpp
androidreaders/readercardadapters/: androiddatatransport.cpp  androiddatatransport.hpp  javabridgedatatransport.cpp  javabridgedatatransport.hpp  morphosamdatatransport.cpp  morphosamdatatransport.hpp
com/islog/liblogicalaccess/: AndroidTag.java  IsoDepCommand.java  NDKHelper.java  NFCAndroid.java  NFCEvent.java  NFCHelper.java
include/logicalaccess/plugins/readers/: android
